--- a/package.json
+++ b/package.json
@@ -8,16 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -38,8 +36,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-react-app": "^6.0.0",
     "gh-pages": "^3.2.3"
-  },
-  "homepage": "https://daniel7r.github.io/to-do"
+  }
 }
